--- a/style.css
+++ b/style.css
@@ -31,3 +31,13 @@
     color: darkgreen;
     font-size: 20px;
 }
+/* .ul.hrr {
+    margin: 0px;
+    padding: 4px;
+} */
+.hrr li{
+    display: inline-block;
+    margin-right: 30px;
+    padding: 3px;
+    border: 1px solid gold;
+}
