--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 .navigation {
     overflow: hidden;
     background-color: darkseagreen;
-    padding: 30px;
+    padding: 20px;
     font-size: 25px;
     text-align: center;
     color: indigo;
@@ -26,6 +26,7 @@
     color: darkgreen;
     font-size: 15px;
     text-align: center;
+    flex: 0 0 auto;
 }
 .headText {
     color: darkgreen;
@@ -39,5 +40,27 @@
     display: inline-block;
     margin-right: 30px;
     padding: 3px;
-    border: 1px solid gold;
+    border: 1px solid green;
 }
+.rentText {
+    text-align: center;
+    color: darkgreen;
+    font-size: 20px;
+    margin: 5px;
+}
+.centerImg {
+    float: center;
+    margin: 9px;
+}
+html,
+body {
+    height: 100%;
+}
+body {
+    display: flex;
+    flex-direction: column;
+}
+.content {
+    flex: 1 0 auto;
+}
+
