--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 .navigation {
     overflow: hidden;
     background-color: darkseagreen;
-    padding: 20px;
+    padding: 10px;
     font-size: 25px;
     text-align: center;
     color: indigo;
@@ -30,7 +30,8 @@
 }
 .headText {
     color: darkgreen;
-    font-size: 20px;
+    font-size: 18px;
+    list-style-image: url(images/icon.jpg);
 }
 /* .ul.hrr {
     margin: 0px;
@@ -44,8 +45,9 @@
 }
 .rentText {
     text-align: center;
-    color: darkgreen;
-    font-size: 20px;
+    color: black;
+    font-size: 18px;
+    font-weight: 400;
     margin: 5px;
 }
 .centerImg {
@@ -63,4 +65,44 @@ body {
 .content {
     flex: 1 0 auto;
 }
+.shortDescription {
+    color: #707070;
+    font-size: 14px;
+    font-style: italic;
+    line-height: 16px;
+    text-align: center;
+}
+.fullDescription {
+    color: #484343;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+}
+.heading {
+    text-align: center;
+    color: black;
+    font-size: 18px;
+    font-weight: 400;
+    background-color: #eaeaea;    
+}
+.inputValue {
+    width: 200px;
+    height: 20px;
+    background-color: rgb(241, 241, 234);
+    font-size: 15px;
+    color: green;
+
+}
+.imgBorder{
+    outline: 2px solid rgb(3, 184, 63);
+}
+a:hover img {
+    outline: 2px solid rgb(194, 11, 11);
+}
+a:hover {
+    color: blue;
+}
+
+
 
