--- a/style.css
+++ b/style.css
@@ -41,7 +41,8 @@
     display: inline-block;
     margin-right: 30px;
     padding: 3px;
-    border: 1px solid green;
+    border: 3px solid green;
+    border-radius: 10px;
 }
 .rentText {
     text-align: center;
@@ -92,17 +93,62 @@ body {
     background-color: rgb(241, 241, 234);
     font-size: 15px;
     color: green;
-
+    text-transform: capitalize;
 }
 .imgBorder{
     outline: 2px solid rgb(3, 184, 63);
 }
 a:hover img {
-    outline: 2px solid rgb(194, 11, 11);
+    /* outline: 2px solid rgb(194, 11, 11); */
+    outline:none;
 }
 a:hover {
     color: blue;
 }
+.hrr li:hover::before {
+    content: ">>";
+    color: blue;
+}
+.hrr li:hover::after {
+    content: "<<";
+    color: blue;
+}
+a:active {
+    color: green;
+}
+input:focus {
+    color: red;
+    background-color:blue;
+}
+.tabl td {
+    color: red;
+    /* border: 4px solid red; */
+    border-collapse: collapse;
+
+}
+.tableFullPicture {
+    text-align: center;
+}
+.tableMoreView {
+    width: 500px;
+}
+.firstLet::first-letter {
+    color: red;
+    font-size: 20px;
+    font-style: italic;
+}
+.forLesson td {
+    color: blue;
+    width: 100px;
+    height: 100px;
+    border: 4px solid red; 
+    border-collapse: collapse;
+}
+.forLessonTd {
+    height: 150px;
+    color:yellow;
+}
+
 
 
 
